--- a/Clementine/src/clementine/settings/settings.fxml
+++ b/Clementine/src/clementine/settings/settings.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="500.0" styleClass="body-background" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="clementine.settings.SettingsController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="500.0" styleClass="body-background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.settings.SettingsController">
     <stylesheets>
         <URL value="@settings.css" />
     </stylesheets>
@@ -59,7 +59,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="302.0" layoutY="537.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" style="-fx-background-color: #fac31e;" text="Save" AnchorPane.bottomAnchor="36.0" AnchorPane.rightAnchor="128.0">
+      <Button fx:id="savebtn" layoutX="302.0" layoutY="537.0" mnemonicParsing="false" onAction="#save" prefHeight="27.0" prefWidth="70.0" style="-fx-background-color: #fac31e;" text="Save" AnchorPane.bottomAnchor="36.0" AnchorPane.rightAnchor="128.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
