--- a/Clementine/src/clementine/songInfo/songinfopage.css
+++ b/Clementine/src/clementine/songInfo/songinfopage.css
@@ -8,5 +8,5 @@
 
 }
 .text-area .content{
-    -fx-background-color:linear-gradient(from 25% 25% to 100% 100%,#FFA500,#FF8C00,#F4A460,#FF7F50,#FFFAFA) !important;
+    -fx-background-color:orange !important;
 }
