--- a/Clementine/src/clementine/covertesting/covermangernew.css
+++ b/Clementine/src/clementine/covertesting/covermangernew.css
@@ -55,6 +55,18 @@ and open the template in the editor.
     
 }
 
+.dwn{
+    -fx-background-color:#DC143C;
+    -fx-border-color:#FA8072; 
+    -fx-border-radius: 5;
+    -fx-border-width: 2;
+    
+}
+.dwn:hover {
+        -fx-background-color:#00BFFF;
+        -fx-scale-y: 1.1;
+}
+
 .transparant{
     -fx-background-color:rgba(0,0,0,0);
 }
