--- a/Clementine/src/clementine/EntranceUI.fxml
+++ b/Clementine/src/clementine/EntranceUI.fxml
@@ -201,6 +201,7 @@
                   </ImageView>
                   <Text layoutX="368.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-1.20" />
                   <Text layoutX="872.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3.40" />
+                  <Button fx:id="player" layoutX="960.0" layoutY="9.0"  onAction="#player"  mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="99.0" text="Button" />
                </children>
             </Pane>
          </children>
